# grid/api/src/main/kotlin/com/bliss/grid/api/mapper/GridToPuzzleMapper.kt
@@ -104,6 +104,7 @@ class GridToPuzzleMapper {
                                     clueId = clueIdByPlacement.getValue(placement),
                                     text = clue.definition,
                                     arrow = clue.direction.toApiArrow(),
+                                    separators = placement.word.separators,
                                 )
                         }
                     }
